prepare Java 10 support