@@ -1331,6 +1331,20 @@
   </build>
   <profiles>
     <profile>
+      <id>java10</id>
+      <activation>
+        <jdk>10</jdk>
+      </activation>
+      <properties>
+        <additionalRuntimeArgLine>--add-modules java.xml.bind,ALL-MODULE-PATH --add-exports java.base/sun.nio.ch=ALL-UNNAMED --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-exports java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED --add-exports java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED</additionalRuntimeArgLine>
+        <jdk.src.version>1.8</jdk.src.version>
+        <jdk.target.version>1.8</jdk.target.version>
+        <jdk.src.exclude>**/module-info.java</jdk.src.exclude>
+        <jacoco.version>0.7.9</jacoco.version>
+        <compiler.plugin.version>3.7.0</compiler.plugin.version>
+      </properties>
+    </profile>
+    <profile>
       <id>java9</id>
       <activation>
         <jdk>9</jdk>
